src/test/ui/issues/issue-53348.stderr
error[E0308]: mismatched types
  --> $DIR/issue-53348.rs:10:13
   |
LL |         a = *i.to_string();
   |             ^^^^^^^^^^^^^^ expected struct `std::string::String`, found `str`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
